# numerals

./: CMakeLists.txt  README.md
cmake/: FindNumerals.cmake
include/numerals/: vector2.h  vector2.inl  vector3.h  vector3.inl  vector4.h  vector4.inl
include/vectors/: vec2.h  vec2.inl  vec3.h  vec3.inl  vec4.h  vec4.inl
tests/: CMakeLists.txt  test_vec2.cpp  test_vec3.cpp  test_vec4.cpp
